--- a/GUIElements/GUIElements.csproj
+++ b/GUIElements/GUIElements.csproj
@@ -55,6 +55,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="GUIAutoHidePanel.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="Themes\Generic.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -69,6 +73,9 @@
     <Compile Include="GUIEnumerations.cs" />
     <Compile Include="GUITogglePanel.xaml.cs">
       <DependentUpon>GUITogglePanel.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="GUIAutoHidePanel.xaml.cs">
+      <DependentUpon>GUIAutoHidePanel.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
